--- a/tool.css
+++ b/tool.css
@@ -5,7 +5,7 @@ body
 	font-size:13px; 
 	background:#EEEEEE;
 	margin:0px;
-	padding:20px;
+	padding:5px;
 	width:100%;
 	height:100%;
 	position:absolute;
@@ -58,6 +58,11 @@ body
 	vertical-align: middle;
 }
 
+.toolpanel{
+	padding-left:10px;
+	display: inline-block;
+	vertical-align: middle;
+}
 
 .destinationitems{
 	padding-right:10px;
@@ -367,7 +372,7 @@ body
 
 .loggedin  
 {
-	display: inline-block;
+	display: block;
 	vertical-align: text-bottom;
 	padding:1px;
   	font-size:9px;
@@ -376,13 +381,14 @@ body
 	background:#f8f8f8;
 	color: #999999;
 	width:250px;
+	float: right;
 }
 
 .genericform {
 	display: grid;
 	gap: 10px;
-	grid-template-columns: 20% 80%;
-	width:1000px;
+	grid-template-columns: 10% 90%;
+	width:100%;
 }
 
 .genericformelementlabel {
@@ -405,17 +411,19 @@ body
 .nav {
 	margin: 2px 0.0em 0 0;
  
-	text-align:center;
+	text-align:left;
 	border-radius: 6px;
-	width: 600px
+	width: 600px;
 	padding-top: 10px;
+	padding-left:8px;
+	display: inline-block;
 }
 
 .navtab {
   display: inline;
   border-width: 1px 1px 0 1px;
-  border-color: #000000;
-  background-color:bbaa99;
+  border-color: black;
+  background-color:#bbaa99;
   FONT-FAMILY:  courier;
   FONT-SIZE: 14px;
   border-radius: 4px;
@@ -429,7 +437,7 @@ body
 .navtabthere {
   display: inline;
   border-width: 1px 1px 0 1px;
-  border-color: #000000;
+  border-color: black;
   background-color:#ffffff;
   FONT-FAMILY:  courier;
   FONT-SIZE: 14px;
@@ -447,6 +455,8 @@ body
 	font-family:courier;
 	font-weight: bold;
 	letter-spacing: .8rem;
+	padding-top:5px;
+	padding-bottom:5px;
 	color: #999999;
 }
 
@@ -461,6 +471,8 @@ body
 
 .outercontent {
   margin-left:0px;
+  margin-top:-12px;
+  padding-top:0px;
   width:1600px;
 }
 
@@ -474,7 +486,8 @@ body
   border-radius: 4px;
  
   padding: 10px;
- 
+  margin-top:0px;
+  padding-top:5px;
   margin: 10px;
 }
 
