--- a/tool.css
+++ b/tool.css
@@ -46,6 +46,40 @@ body
  
 }
 
+.dot-loader {
+  display: flex;
+  gap: 5px;
+  justify-content: center;
+  vertical-align: top;
+  align-items: center;
+}
+
+.dot-loader span {
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background-color: black;
+  opacity: 0.2;
+  vertical-align: top;
+  animation: blink 1.2s infinite;
+}
+
+.dot-loader span:nth-child(2) {
+  animation-delay: 0.2s;
+}
+.dot-loader span:nth-child(3) {
+  animation-delay: 0.4s;
+}
+
+@keyframes blink {
+  0%, 80%, 100% {
+    opacity: 0.2;
+  }
+  40% {
+    opacity: 1;
+  }
+}
+
 .listtools{
 	border:1px solid #000000
 }
